[package]
name = "DogeToyDB"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1"
sqlparser = { version = "0.53", features = ["serde"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
[dependencies.rocksdb]
git = "https://github.com/rust-rocksdb/rust-rocksdb.git"
[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",
]